# basic-C-compiler

./: CMakeLists.txt  README.md  ast.cpp  ast.h  ast_printer.cpp  ast_printer.h  ast_printer_primitive.cpp  lex.cpp  lex.h  main.cpp  parser.cpp  parser.h  test
src/: assembly.s  ast.h  ast_printer.cpp  ast_printer.h  codegen.cpp  codegen.h  lex.cpp  lex.h  main.cpp  out  parser.cpp  parser.h  test
src/test.dSYM/Contents/Resources/DWARF/: test
test.dSYM/Contents/Resources/DWARF/: test
tests/: test.c
